--- a/index.html
+++ b/index.html
@@ -7,6 +7,16 @@
     <title>HTML Images</title>
   </head>
   <body>
+    <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" />
+    <img
+    src="https://s3.amazonaws.com/ironboard-learn/lion.jpg"
+    alt="the big yawn"
+    />
+    <img
+    src="https://s3.amazonaws.com/ironboard-learn/lion.jpg"
+    alt="Big yawnzzzzz"
+    title="He sleepy"
+    />
     <!-- Your code here -->
   </body>
 </html>
